--- a/gradle/integTest.gradle
+++ b/gradle/integTest.gradle
@@ -6,6 +6,9 @@ sourceSets {
 }
 
 task integTest(type: Test) {
+    group = LifecycleBasePlugin.VERIFICATION_GROUP
+    description = 'Runs the integration tests.'
+
     testClassesDir = sourceSets.integTest.output.classesDir
     classpath = sourceSets.integTest.runtimeClasspath
 }
@@ -15,3 +18,19 @@ gradlePlugin {
 }
 
 check.dependsOn integTest
+
+gradle.projectsEvaluated {
+    def quickTasks = [] 
+
+    gradle.rootProject.allprojects.each { project -> 
+        quickTasks.addAll(project.tasks.findAll { it.name == 'test' }) 
+        quickTasks.addAll(project.tasks.withType(FindBugs))
+        quickTasks.addAll(project.tasks.withType(Pmd)) 
+        quickTasks.addAll(project.tasks.withType(CodeNarc))
+    }
+
+    quickTasks.each { task ->
+        project.tasks.integTest.mustRunAfter task 
+    }
+}
+
