Implement a KubernetesCreate Task and test it
This kubernetes task takes a file and creates the specified stuff in the
kubernetes cluster.

First part of #7

--- a/plugin/build.gradle
+++ b/plugin/build.gradle
@@ -16,6 +16,7 @@ dependencies {
     compile gradleApi()
 
     compile 'com.bmuschko:gradle-docker-plugin:3.0.3'
+    compile "io.fabric8:kubernetes-client:${libraryVersions.kubernetesClient}"
 
     testBaseCompile gradleTestKit()
     testBaseCompile "junit:junit:${libraryVersions.junit}"
