--- a/plugin/build.gradle
+++ b/plugin/build.gradle
@@ -23,6 +23,7 @@ dependencies {
     testBaseCompile("org.spockframework:spock-core:${libraryVersions.spock}") {
         exclude group: 'org.codehaus.groovy'
     }
+    testBaseCompile 'org.apache.commons:commons-lang3:3.5'
 
     integTestCompile "com.github.docker-java:docker-java:3.0.6"
 }
