Add main runtime classpath to testBase

--- a/gradle/testBase.gradle
+++ b/gradle/testBase.gradle
@@ -1,5 +1,6 @@
 sourceSets {
     testBase {
+        compileClasspath += sourceSets.main.runtimeClasspath
         runtimeClasspath += compileClasspath
     }
 
