Implement and test the task dependencies
Generate tasks for portforwarding to the registry, tagging and pushing
to the registry and link all the tasks in the right order.

Move the gradle, docker and kubernetes setup for testing into traits.

--- a/plugin/build.gradle
+++ b/plugin/build.gradle
@@ -25,7 +25,7 @@ dependencies {
     }
     testBaseCompile 'org.apache.commons:commons-lang3:3.5'
 
-    integTestCompile "com.github.docker-java:docker-java:3.0.6"
+    testBaseCompile 'com.github.docker-java:docker-java:3.0.6'
 }
 
 gradlePlugin {
