--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,5 @@
 include ":plugin"
+include ":test-utils"
 include ":example-web-project"
 include ":example-application-project"
 include ":standalone-test"
