--- a/test-utils/build.gradle
+++ b/test-utils/build.gradle
@@ -9,8 +9,8 @@ dependencies {
     compile("org.spockframework:spock-core:${libraryVersions.spock}") {
         exclude group: 'org.codehaus.groovy'
     }
-    compile 'org.apache.commons:commons-lang3:3.5'
+    compile "org.apache.commons:commons-lang3:${libraryVersions.apacheCommons}"
 
     compile "io.fabric8:kubernetes-client:${libraryVersions.kubernetesClient}"
-    compile 'com.github.docker-java:docker-java:3.0.6'
+    compile "com.github.docker-java:docker-java:${libraryVersions.dockerJava}"
 }
