--- a/build.gradle
+++ b/build.gradle
@@ -2,10 +2,13 @@ plugins {
     id 'com.github.ben-manes.versions' version '0.13.0'
 }
 
+apply from: "${rootDir}/gradle/dependencyUpdates.gradle"
+
 allprojects {
     apply from: "${rootDir}/gradle/libraryVersions.gradle"
 
     repositories {
         jcenter()
+	mavenCentral()
     }
 }
