--- a/buildSrc/build.gradle
+++ b/buildSrc/build.gradle
@@ -2,13 +2,16 @@ plugins {
     id 'groovy'
 }
 
+apply from: "${rootDir}/../gradle/libraryVersions.gradle"
+
 repositories {
     jcenter()
+    mavenCentral()
 }
 
 dependencies {
     compile gradleApi()
     compile localGroovy()
 
-    compile 'io.swagger:swagger-codegen:2.2.1'
+    compile "io.swagger:swagger-codegen:${libraryVersions.swaggerCodegen}"
 }
