--- a/plugin/build.gradle
+++ b/plugin/build.gradle
@@ -15,7 +15,7 @@ dependencies {
     compile localGroovy()
     compile gradleApi()
 
-    compile 'com.bmuschko:gradle-docker-plugin:3.0.3'
+    compile "com.bmuschko:gradle-docker-plugin:${libraryVersions.dockerPlugin}"
     compile "io.fabric8:kubernetes-client:${libraryVersions.kubernetesClient}"
 
     testBaseCompile project(':test-utils')
