--- a/api-model/build.gradle
+++ b/api-model/build.gradle
@@ -1,5 +1,5 @@
-import org.detoeuf.SwaggerCodeGenTask
 import io.swagger.codegen.config.CodegenConfigurator
+import org.detoeuf.SwaggerCodeGenTask
 
 plugins {
     id 'java'
@@ -15,10 +15,8 @@ sourceSets {
     main {
         java {
             srcDirs += [
-                    "$projectDir/src/main/java",
-                    "$buildDir/swagger/v1beta1/src/main/java"
+                    "$buildDir/swagger/kubernetes/model"
             ]
-            include 'com/github/kolleroot/gradle/kubernetes/model/api/**'
         }
     }
 }
@@ -34,17 +32,17 @@ dependencies {
     testCompile project(':test-utils')
 }
 
-task swaggerKubernetesV1Beta1(type: SwaggerCodeGenTask) {
+task generateKubernetesModel(type: SwaggerCodeGenTask) {
     configurator = new CodegenConfigurator()
             .setLang('java')
-            .setOutputDir("$buildDir/swagger/v1beta1")
+            .setOutputDir("$buildDir/swagger/kubernetes/codegen")
             .setInputSpec("$projectDir/src/main/swagger/swagger.json")
-            //.setInputSpec('https://raw.githubusercontent.com/kubernetes/kubernetes/master/api/openapi-spec/swagger
-            //        .json')
+    //.setInputSpec('https://raw.githubusercontent.com/kubernetes/kubernetes/master/api/openapi-spec/swagger
+    //        .json')
             .setTemplateDir("$projectDir/src/main/swagger/tpl")
             .addAdditionalProperty('dateLibrary', 'java8')
-            //.addTypeMapping('array', 'org.gradle.model.ModelSet')
-            //.addTypeMapping('map', 'org.gradle.model.ModelMap')
+    //.addTypeMapping('array', 'org.gradle.model.ModelSet')
+    //.addTypeMapping('map', 'org.gradle.model.ModelMap')
             .addTypeMapping('resource.Quantity', 'String')
             .addTypeMapping('intstr.IntOrString', 'String')
             .addTypeMapping('byte[]', 'String')
@@ -52,24 +50,21 @@ task swaggerKubernetesV1Beta1(type: SwaggerCodeGenTask) {
             .setModelPackage('com.github.kolleroot.gradle.kubernetes.model.api')
 }
 
-task swaggerKubernetesV1Beta1Original(type: SwaggerCodeGenTask) {
-    configurator = new CodegenConfigurator()
-            .setLang('java')
-            .setOutputDir("$buildDir/swagger/original")
-    //.setInputSpec("$projectDir/src/main/swagger/v1beta1.json")
-            .setInputSpec('https://raw.githubusercontent.com/kubernetes/kubernetes/master/api/openapi-spec/swagger.json')
-            .addAdditionalProperty('dateLibrary', 'java8')
-    //.addTypeMapping('array', 'org.gradle.model.ModelSet')
-    //.addTypeMapping('map', 'org.gradle.model.ModelMap')
-            .setModelPackage('com.github.kolleroot.gradle.kubernetes.model.api')
+task extractGeneratedKubernetesModel(type: Copy, dependsOn: generateKubernetesModel) {
+    from("$buildDir/swagger/kubernetes/codegen/src/main/java") {
+        include 'com/github/kolleroot/gradle/kubernetes/model/api/*.java'
+    }
+
+    into "$buildDir/swagger/kubernetes/model"
 }
 
-task swaggerKubernetes(dependsOn: [
-//         swaggerKubernetesV1,
-        swaggerKubernetesV1Beta1
-])
+task fixTopLevelObjects(type: MutateTopLevelApiElement, dependsOn: extractGeneratedKubernetesModel) {
+    source = extractGeneratedKubernetesModel
+    
+    ignoreClasses << 'V1OwnerReference.java'
+}
 
-compileJava.dependsOn swaggerKubernetes
+compileJava.dependsOn fixTopLevelObjects
 
 codenarcMain {
     configFile file("${rootDir}/config/codenarc/codenarc-main.rules")
@@ -77,4 +72,29 @@ codenarcMain {
 
 codenarcTest {
     configFile file("${rootDir}/config/codenarc/codenarc-test.rules")
+}
+
+class MutateTopLevelApiElement extends SourceTask {
+    
+    @PathSensitive(PathSensitivity.NAME_ONLY)
+    List<String> ignoreClasses = new ArrayList<>()
+
+    @TaskAction
+    void processFiles() {
+        getSource().each { source ->
+            if(ignoreClasses.contains(source.name)) {
+                return
+            }
+
+            // get all objects containing an apiVersion and a kind
+            if (!(source.text =~ /getApiVersion\(\)/) || !(source.text =~ /getKind\(\)/)) {
+                return
+            }
+
+            String content = source.text
+            source.withWriter { w ->
+                w << content.replaceAll(/(?<=public interface )([a-zA-Z1-9]+)\s(?=\{)/, /$1 extends TopLevelApiObject /)
+            }
+        }
+    }
 }
