--- a/api-model/build.gradle
+++ b/api-model/build.gradle
@@ -1,3 +1,4 @@
+import com.github.kolleroot.gradle.kubernetes.buildsrc.MutateTopLevelApiElement
 import io.swagger.codegen.config.CodegenConfigurator
 import org.detoeuf.SwaggerCodeGenTask
 
@@ -60,7 +61,7 @@ task extractGeneratedKubernetesModel(type: Copy, dependsOn: generateKubernetesMo
 
 task fixTopLevelObjects(type: MutateTopLevelApiElement, dependsOn: extractGeneratedKubernetesModel) {
     source = extractGeneratedKubernetesModel
-    
+
     ignoreClasses << 'V1OwnerReference.java'
 }
 
@@ -72,29 +73,4 @@ codenarcMain {
 
 codenarcTest {
     configFile file("${rootDir}/config/codenarc/codenarc-test.rules")
-}
-
-class MutateTopLevelApiElement extends SourceTask {
-    
-    @PathSensitive(PathSensitivity.NAME_ONLY)
-    List<String> ignoreClasses = new ArrayList<>()
-
-    @TaskAction
-    void processFiles() {
-        getSource().each { source ->
-            if(ignoreClasses.contains(source.name)) {
-                return
-            }
-
-            // get all objects containing an apiVersion and a kind
-            if (!(source.text =~ /getApiVersion\(\)/) || !(source.text =~ /getKind\(\)/)) {
-                return
-            }
-
-            String content = source.text
-            source.withWriter { w ->
-                w << content.replaceAll(/(?<=public interface )([a-zA-Z1-9]+)\s(?=\{)/, /$1 extends TopLevelApiObject /)
-            }
-        }
-    }
 }
