Create a task that generates json from a gradle model
Crate a task writing json into a file from the gradle model using the
GradleGenson json serializer.

--- a/api-model/build.gradle
+++ b/api-model/build.gradle
@@ -42,6 +42,7 @@ task generateKubernetesModel(type: SwaggerCodeGenTask) {
     //        .json')
             .setTemplateDir("$projectDir/src/main/swagger/tpl")
             .addAdditionalProperty('dateLibrary', 'java8')
+            .addAdditionalProperty('serializableModel', 'true')
     //.addTypeMapping('array', 'org.gradle.model.ModelSet')
     //.addTypeMapping('map', 'org.gradle.model.ModelMap')
             .addTypeMapping('resource.Quantity', 'String')
