--- a/settings.gradle
+++ b/settings.gradle
@@ -1,6 +1,6 @@
-include ":plugin"
+rootProject.name = 'kubernetes'
+
+include ":gradle-kubernetes-plugin"
 include ":api-model"
 include ":test-utils"
-include ":example-web-project"
-include ":example-application-project"
 include ":standalone-test"
