Upgrade to gradle 3.4

--- a/gradle/integTest.gradle
+++ b/gradle/integTest.gradle
@@ -11,6 +11,8 @@ task integTest(type: Test) {
 
     testClassesDir = sourceSets.integTest.output.classesDir
     classpath = sourceSets.integTest.runtimeClasspath
+
+    maxParallelForks = 2
 }
 
 gradlePlugin {
