First try in moving the generated files and testing it

--- a/example-application-project/build.gradle
+++ b/example-application-project/build.gradle
@@ -1,6 +1,6 @@
 import com.github.kolleroot.gradle.kubernetes.model.DefaultDockerImage
 import com.github.kolleroot.gradle.kubernetes.model.KubernetesLocalDockerRegistry
-import com.github.kolleroot.gradle.kubernetes.model.api.V1Pod
+import com.github.kolleroot.gradle.kubernetes.model.api.generated.V1Pod
 
 buildscript {
     repositories {
