Change the mechanism to add files to a dockerfile
Docker does only automatically extract tar files or one of their
compressed versions, but not zip files. To take adventage of this docker
feature, the files to be added are now packed into tar archives.

There are now also tests to verify that the files are actually extracted
from the archive.

--- a/example-application-project/build.gradle
+++ b/example-application-project/build.gradle
@@ -25,15 +25,19 @@ model {
     kubernetes {
         dockerImages {
             simple(DefaultDockerImage) {
-                // from 'openjdk:8-jdk'
-                from 'alpine:3.5'
+                from 'openjdk:8-jre-alpine'
+                addFiles '/opt/app/', {
+                    from installDist.outputs
+                }
+
+                defaultCommand '/opt/app/bin/example-application-project'
             }
         }
 
         dockerRegistries {
             'localhost:5000'(KubernetesLocalDockerRegistry) {
                 namespace = 'kube-system'
-                pod = 'kube-registry-1640093215-3o399'
+                pod = 'kube-registry-913633130-34rlf'
                 port = '5000:5000'
             }
         }
@@ -51,6 +55,7 @@ model {
                         create {
                             name = 'test-container'
                             image = 'localhost:5000/simple'
+                            imagePullPolicy = 'always'
                             volumeMounts.create {
                                 name = 'data'
                                 mountPath = '/data'
